# Matrix-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  matrix.h  vector.h
src/Types/: BasicStrongType.h  BasicStrongType_Functionalities.h  column.h  row.h
test/: CMakeLists.txt  MatrixTest.cpp  VectorTest.cpp
